// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`core/layout/components/Version Version renders correctly with latest version 1`] = `
.emotion-6 {
  color: #ef6c00;
}

.emotion-0 {
  margin: 0;
}

<div
  className=" emotion-6 emotion-7"
>
  <p
    className="emotion-0 emotion-1"
  >
    Version Info
  </p>
  <p
    className="emotion-0 emotion-1"
  >
    Flexget:
    2.10.60
     
  </p>
  <p
    className="emotion-0 emotion-1"
  >
    API:
    1.1.2
  </p>
</div>
`;

exports[`core/layout/components/Version Version renders correctly without latest version 1`] = `
.emotion-6 {
  color: #ef6c00;
}

.emotion-0 {
  margin: 0;
}

<div
  className=" emotion-6 emotion-7"
>
  <p
    className="emotion-0 emotion-1"
  >
    Version Info
  </p>
  <p
    className="emotion-0 emotion-1"
  >
    Flexget:
    2.10.11
     
    <a
      aria-disabled={false}
      className="MuiButtonBase-root MuiIconButton-root"
      href="https://flexget.com/ChangeLog"
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
    >
      <span
        className="MuiIconButton-label"
      />
    </a>
  </p>
  <p
    className="emotion-0 emotion-1"
  >
    API:
    1.1.2
  </p>
</div>
`;

exports[`core/layout/components/Version mapStateToProps should return the version 1`] = `
Object {
  "version": Object {
    "api": "1.1.2",
    "flexget": "2.10.11",
    "latest": "2.10.60",
  },
}
`;
